--- a/config/stomp_planning.yaml
+++ b/config/stomp_planning.yaml
@@ -1,5 +1,5 @@
-stomp/so_arm100:
-  group_name: so_arm100
+stomp/so100:
+  group_name: so100
   optimization:
     num_timesteps: 60
     num_iterations: 40
@@ -11,7 +11,7 @@ stomp/so_arm100:
   task:
     noise_generator:
       - class: stomp_moveit/NormalDistributionSampling
-        stddev: [0.05, 0.05, 0.05, 0.05, 0.05, 0.05]
+        stddev: [0.05, 0.05, 0.05, 0.05, 0.05]
     cost_functions:
       - class: stomp_moveit/CollisionCheck
         collision_penalty: 1.0
