--- a/package.xml
+++ b/package.xml
@@ -5,8 +5,8 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the so_arm100 with the MoveIt Motion Planning Framework
   </description>
-  <author email="yaohui.zhu@seeed.cc">so_arm100</author>
-  <maintainer email="yaohui.zhu@seeed.cc">so_arm100</maintainer>
+  <author email="yaohui.zhu@seeed.cc">so_arm100_moveit</author>
+  <maintainer email="yaohui.zhu@seeed.cc">so_arm100_moveit</maintainer>
 
   <license>BSD</license>
 
@@ -35,6 +35,7 @@
   <!-- <run_depend>gazebo_ros_control</run_depend> -->
   <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
   <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
-]
+  <run_depend>so_arm100</run_depend>
+
 
 </package>
